# lib-nested

./: .gitignore  Cargo.toml  enable_nodeadlock.sh  rust-toolchain
display-server-tty/: Cargo.toml
display-server-tty/src/: main.rs
examples/tty-01-hello/: Cargo.toml  README.md
examples/tty-01-hello/src/: main.rs
examples/tty-02-digit/: Cargo.toml  README.md
examples/tty-02-digit/src/: main.rs
examples/tty-02-node/: Cargo.toml
examples/tty-02-node/src/: main.rs
examples/tty-03-string/: Cargo.toml  README.md
examples/tty-03-string/src/: main.rs
lib-nested-core/: Cargo.toml
lib-nested-core/src/: lib.rs
lib-nested-core/src/editTree/: addr.rs  diagnostics.rs  nav.rs  node.rs  treetype.rs
lib-nested-core/src/edit_tree/: diagnostics.rs  mod.rs  nav.rs  node.rs  treetype.rs
lib-nested-core/src/editors/: mod.rs
lib-nested-core/src/editors/char/: mod.rs
lib-nested-core/src/editors/digit/: cmd.rs  ctx.rs  editor.rs  mod.rs
lib-nested-core/src/editors/integer/: ctx.rs  editor.rs  mod.rs  radix.rs
lib-nested-core/src/editors/list/: cmd.rs  ctx.rs  editor.rs  mod.rs  nav.rs  segment.rs
lib-nested-core/src/editors/product/: editor.rs
lib-nested-core/src/editors/sum/: editor.rs
lib-nested-core/src/editors/typeterm/: cmd.rs  ctx.rs  mod.rs  nav.rs
lib-nested-core/src/reprTree/: context.rs  mod.rs
lib-nested-core/src/repr_tree/: context.rs  mod.rs  morphism.rs  tests.rs
lib-nested-core/src/tree/: diagnostics.rs  mod.rs  nav.rs  node.rs
lib-nested-core/src/type_system/: context.rs  mod.rs  repr_tree.rs
lib-nested-core/src/utils/: mod.rs
lib-nested-tty/: Cargo.toml
lib-nested-tty/src/: ansi_parser.rs  compositor.rs  cursor_widget.rs  diagnostics.rs  lib.rs  style.rs  sum_editor.rs  terminal.rs  tty_application.rs
lib-nested-tty/src/atom/: mod.rs
lib-nested-tty/src/edit_tree/: color.rs  keymap.rs  mod.rs
lib-nested-tty/src/editors/: list.rs  mod.rs
lib-nested-tty/src/widgets/: ascii_box.rs  mod.rs  monstera.rs
math/fib/: Cargo.toml
math/fib/src/: main.rs
math/int2str/: Cargo.toml
math/int2str/src/: main.rs
math/radix_transform/: Cargo.toml
math/radix_transform/src/: main.rs
math/str2int/: Cargo.toml
math/str2int/src/: main.rs
nested/: Cargo.toml
nested/src/: bimap.rs  char_editor.rs  color.rs  commander.rs  diagnostics.rs  leveled_term_view.rs  lib.rs  make_editor.rs  projection.rs  string_editor.rs  tree_nav.rs  type_term_editor.rs
nested/src/char/: mod.rs
nested/src/core/: channel.rs  context.rs  mod.rs  observer.rs  port.rs  type_term.rs  view.rs
nested/src/editors/: mod.rs
nested/src/editors/char/: mod.rs
nested/src/editors/integer/: add.rs  ctx.rs  editor.rs  mod.rs
nested/src/editors/list/: cmd.rs  commander.rs  ctx.rs  cursor.rs  editor.rs  mod.rs  nav.rs  pty_editor.rs  segment.rs
nested/src/editors/product/: editor.rs  nav.rs  segment.rs
nested/src/editors/sum/: editor.rs
nested/src/editors/typeterm/: cmd.rs  ctx.rs  mod.rs  nav.rs
nested/src/grid/: flatten.rs  mod.rs  offset.rs  window_iterator.rs
nested/src/index/: buffer.rs  map_item.rs  map_key.rs  mod.rs
nested/src/integer/: add.rs  digit.rs  editor.rs  mod.rs  radix.rs
nested/src/list/: cursor.rs  editor.rs  editor_view.rs  mod.rs  nav.rs  pty_editor.rs  segment.rs  sexpr.rs
nested/src/path/: mod.rs
nested/src/product/: editor.rs  element.rs  mod.rs  nav.rs  segment.rs
nested/src/sdf/: mod.rs  term.rs
nested/src/sequence/: decorator.rs  enumerate.rs  filter.rs  flatten.rs  map.rs  mod.rs  seq2idx.rs  vec_buffer.rs
nested/src/singleton/: buffer.rs  flatten.rs  map.rs  mod.rs  to_index.rs  to_sequence.rs
nested/src/sum/: editor.rs  mod.rs
nested/src/terminal/: ansi_parser.rs  atom.rs  compositor.rs  mod.rs  style.rs  terminal.rs
nested/src/tree/: addr.rs  cursor.rs  mod.rs  nav.rs  node.rs  treetype.rs
nested/src/type_system/: context.rs  dict.rs  editor.rs  ladder.rs  make_editor.rs  mod.rs  repr_tree.rs  term.rs  type_term.rs  type_term_editor.rs
nested/src/utils/: bimap.rs  color.rs  mod.rs  modulo.rs
nested/src/vec/: buffer.rs  mod.rs  vec2bin.rs  vec2json.rs  vec2seq.rs
pty-server/: Cargo.toml
sdf_editor/: Cargo.toml
sdf_editor/src/: main.rs
shell/: Cargo.toml  gram2  grammar
shell/src/: ascii_box.rs  box.rs  command.rs  expr.rs  incubator.rs  list.rs  main.rs  monstera.rs  plot.rs  process.rs  pty.rs
src/: cell_layout.rs  channel.rs  grid_offset.rs  leveled_term_view.rs  main.rs  port.rs  projection.rs  singleton_buffer.rs  string_editor.rs  vec_buffer.rs  view.rs
src/core/: mod.rs  observer.rs  port.rs  view.rs
src/grid/: mod.rs  offset.rs
src/index/: map_item.rs  map_key.rs  mod.rs
src/sequence/: flatten.rs  mod.rs  seq2idx.rs  vec_buffer.rs
src/singleton/: buffer.rs  mod.rs
src/terminal/: compositor.rs  mod.rs  terminal.rs
src/view/: grid.rs  index.rs  mod.rs  sequence.rs  singleton.rs
terminal/ansi_parser/src/: main.rs
terminal/display_server/src/: main.rs
