[package]
authors = ["Michael Sippel <micha@fragmental.art>"]
name = "display_server"
version = "0.1.0"
edition = "2018"

[dependencies]
nested = { path = "../../nested" }
termion = "1.5.5"
cgmath = { version = "0.18.0", features = ["serde"] }
serde = { version = "1.0", features = ["serde_derive"] }
bincode = "1.3.3"
