[package]
authors = ["Michael Sippel <micha@fragmental.art>"]
name = "ansi_parser"
version = "0.1.0"
edition = "2018"

[dependencies]
nested = { path = "../../nested" }
cgmath = { version = "0.18.0", features = ["serde"] }
serde = { version = "1.0", features = ["serde_derive"] }
bincode = "1.3.3"
vte = "0.10.1"
ansi_colours = "1.0"
