[package]
name = "sdf_editor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nako = {git= "https://gitlab.com/senvas/nako.git"}
nako_std = {git= "https://gitlab.com/senvas/nako.git"}
nakorender = {git="https://gitlab.com/senvas/nako.git", default-features = false}
nested = { path = "../nested" }
cgmath = "*"
termion = "*"
font-kit = "*"

[dependencies.async-std]
version = "1.9.0"
features = ["unstable", "attributes"]
