[package]
name = "shell"
version = "0.1.0"
edition = "2018"

[dependencies]
nested = { path = "../nested" }
cgmath = "*"
termion = "*"
bincode = "*"
libc = "0.2.*"
portable-pty = "0.4.0"

nako = {git= "https://git.exobiont.de/senvas/nako.git"}
nako_std = {git= "https://git.exobiont.de/senvas/nako.git"}
nakorender = {git="https://git.exobiont.de/senvas/nako.git", default-features = false}

[dependencies.async-std]
version = "1.9.0"
features = ["unstable", "attributes"]
