[package]
name = "radix_transform"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nested = { path = "../../nested" }

[dependencies.async-std]
version = "1.9.0"
features = ["unstable", "attributes"]
